<resources>
    <string name="app_name">Dishcovery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="no_account">No Account?</string>
    <string name="Hint">john@gmail.com</string>
    <string name="username">Username</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="have_account">Have account?</string>
    <string name="Welcome_to_profile">Welcome to your profile,</string>
    <string name="test_name">Yara Mohamed</string>
    <string name="favourite">Favourite</string>
    <string name="meals_schedule">Meals Schedule</string>
    <string name="logout">Logout</string>
    <string name="meal_of_the_day">Meal of the day</string>
    <string name="meal_name">Meal name</string>
    <string name="suggested_meals">Suggested Meals</string>
    <string name="your_favourites_meals">Your Favourites Meals</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="your_weekly_schedule">Your Weekly Schedule</string>
    <string name="Sunday">Sunday</string>
    <string name="date">10, jan, 2025</string>
    <string name="more_info">More Information</string>
    <string name="backup">Backup</string>
    <string name="search">Search</string>
    <string name="Ingredient">Ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="text_test">instructions instructions instructions instructions instructions instructions instructions instructions instructions instructions instructions</string>
    <string name="video">Video</string>
    <string name="_2_kg">2 kg</string>
    <string name="suggested_meal">Suggested Meal</string>
    <string name="web_id">843118228239-5i0deh0jdl0pulnflg1m81ilq3g8127e.apps.googleusercontent.com</string>
    <string name="Skip">Skip</string>
    <string name="please_login_first">Please Login First</string>
    <string name="please_check_your_interner_connection">Please check your \ninternet connection</string>
</resources>