<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".profile.view.ProfileFragment">

    <ImageView
        android:id="@+id/logo"
        style="@style/logo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/profile_animation" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/Welcome_to_profile"
        android:textColor="@color/dark_red"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/test_name"
        android:layout_marginTop="5dp"
        android:textColor="@color/dark_red"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backupBtn"
        style="@style/Buttons"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:drawableLeft="@drawable/backup_logo"
        android:text="@string/backup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutBtn"
        style="@style/Buttons"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/logout_logo"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="@+id/backupBtn"
        app:layout_constraintTop_toBottomOf="@+id/backupBtn" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/Buttons"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:text="@string/login"
        android:drawableLeft="@drawable/logout_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>