<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".meal.view.ItemFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            style="@style/logo"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/favIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/bookmark_colored"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemMealCard" />

        <ImageView
            android:id="@+id/calenderIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/calender_colored"
            app:layout_constraintEnd_toStartOf="@+id/favIcon"
            app:layout_constraintTop_toBottomOf="@+id/itemMealCard" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/itemMealCard"
            android:layout_width="370dp"
            android:layout_height="210dp"
            android:layout_marginTop="20dp"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/dark_red_opacity"
            app:cardCornerRadius="16dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <ImageView
                android:id="@+id/itemImg"
                android:layout_width="180dp"
                android:layout_height="210dp"
                android:scaleType="centerCrop"
                android:src="@drawable/fried_salmon_steak_cooked_green_600nw_2489026949" />

            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="80dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/meal_name"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/itemCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="70dp"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/category_logo"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/itemCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="70dp"
                android:layout_marginTop="55dp"
                android:drawableLeft="@drawable/flag_logo"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/country"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/ingredients"
            style="@style/Titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="26dp"
            android:text="@string/ingredients"
            app:layout_constraintStart_toStartOf="@+id/itemMealCard"
            app:layout_constraintTop_toBottomOf="@+id/itemMealCard" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredientsRecycle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:nestedScrollingEnabled="false"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients" />

        <TextView
            android:id="@+id/instructions"
            style="@style/Titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/instructions"
            app:layout_constraintStart_toStartOf="@+id/ingredients"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsRecycle" />

        <TextView
            android:id="@+id/instructionsTxt"
            android:layout_width="340dp"
            android:layout_height="wrap_content"

            android:fontFamily="@font/montserrat_regular"
            android:text="@string/text_test"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/instructions"
            app:layout_constraintTop_toBottomOf="@+id/instructions" />

        <TextView
            android:id="@+id/Video"
            style="@style/Titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/video"
            app:layout_constraintStart_toStartOf="@+id/ingredients"
            app:layout_constraintTop_toBottomOf="@+id/instructionsTxt" />

        <FrameLayout
            android:layout_width="370dp"
            android:layout_height="210dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/Video">

            <WebView
                android:id="@+id/videoWebView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>