<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fav_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/itemMealCard"
        android:layout_width="358dp"
        android:layout_height="179dp"
        app:cardBackgroundColor="@color/dark_red_opacity"
        android:elevation="4dp"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/favImg"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/fried_salmon_steak_cooked_green_600nw_2489026949" />

        <TextView
            android:id="@+id/favTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/meal_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/categoryTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/category_logo"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/category"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/countryTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="42dp"
            android:layout_marginTop="45dp"
            android:drawableLeft="@drawable/flag_logo"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/country"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/deletAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/delete_logo" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>